k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bestcloudforme-service
  namespace: bestcloudforme
  labels:
    app: bestcloudforme
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: bestcloudforme
