k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bestcloudforme
  namespace: bestcloudforme
  labels:
    name: ingress-nginx-controller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - bestcloudforme.yildirim7mustafa.online
      secretName: bestcloudforme-tls
  rules:
    - host: bestcloudforme.yildirim7mustafa.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bestcloudforme-service
                port:
                  number: 8080
